@@ -22,10 +22,11 @@ import org.apache.kafka.common.message.StreamsGroupDescribeResponseData;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
+import java.util.SortedMap;
+import java.util.TreeMap;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -42,7 +43,7 @@ public class ConfiguredTopologyTest {
             () -> new ConfiguredTopology(
                 0,
                 null,
-                Collections.emptyMap(),
+                Map.of(),
                 Optional.empty()
             )
         );
@@ -53,7 +54,7 @@ public class ConfiguredTopologyTest {
         assertThrows(NullPointerException.class,
             () -> new ConfiguredTopology(
                 0,
-                Optional.of(Map.of()),
+                Optional.of(new TreeMap<>()),
                 null,
                 Optional.empty()
             )
@@ -66,7 +67,7 @@ public class ConfiguredTopologyTest {
             () -> new ConfiguredTopology(
                 0,
                 Optional.empty(),
-                Collections.emptyMap(),
+                Map.of(),
                 null
             )
         );
@@ -77,8 +78,8 @@ public class ConfiguredTopologyTest {
         assertThrows(IllegalArgumentException.class,
             () -> new ConfiguredTopology(
                 -1,
-                Optional.of(Map.of()),
-                Collections.emptyMap(),
+                Optional.of(new TreeMap<>()),
+                Map.of(),
                 Optional.empty()
             )
         );
@@ -90,7 +91,7 @@ public class ConfiguredTopologyTest {
             () -> new ConfiguredTopology(
                 1,
                 Optional.empty(),
-                Collections.emptyMap(),
+                Map.of(),
                 Optional.empty()
             )
         );
@@ -100,7 +101,7 @@ public class ConfiguredTopologyTest {
     @Test
     public void testIsReady() {
         ConfiguredTopology readyTopology = new ConfiguredTopology(
-            1, Optional.of(Map.of()), new HashMap<>(), Optional.empty());
+            1, Optional.of(new TreeMap<>()), new HashMap<>(), Optional.empty());
         assertTrue(readyTopology.isReady());
 
         ConfiguredTopology notReadyTopology = new ConfiguredTopology(
@@ -114,7 +115,7 @@ public class ConfiguredTopologyTest {
         ConfiguredSubtopology subtopologyMock = mock(ConfiguredSubtopology.class);
         StreamsGroupDescribeResponseData.Subtopology subtopologyResponse = new StreamsGroupDescribeResponseData.Subtopology();
         when(subtopologyMock.asStreamsGroupDescribeSubtopology(Mockito.anyString())).thenReturn(subtopologyResponse);
-        Map<String, ConfiguredSubtopology> subtopologies = new HashMap<>();
+        SortedMap<String, ConfiguredSubtopology> subtopologies = new TreeMap<>();
         subtopologies.put("subtopology1", subtopologyMock);
         Map<String, CreatableTopic> internalTopicsToBeCreated = new HashMap<>();
         Optional<TopicConfigurationException> topicConfigurationException = Optional.empty();
